--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,15 @@ project(TestingProblems)
 set(CMAKE_CXX_STANDARD 14)
 
 add_executable(TestingProblems
-        字符串类/5.最长回文子串.cpp
-        字符串类/无重复字符的最长子串.cpp
-        排序类/HJ68成绩排序.cpp
-        数组/HJ3明明的随机数.cpp
-        链表/合并两个有序链表.cpp
-        链表/反转链表.cpp
-        链表/分隔链表.cpp)
+        #字符串类/5.最长回文子串.cpp
+        #字符串类/无重复字符的最长子串.cpp
+        #排序类/HJ68成绩排序.cpp
+        #数组/HJ3明明的随机数.cpp
+        #链表/合并两个有序链表.cpp
+        #链表/反转链表.cpp
+        #链表/分隔链表.cpp
+        #链表/合并k个升序链表.cpp
+        #字符串类/49.字符串异位词分组.cpp
+        #哈希表/128.最长连续子序列.cpp
+        数组/接雨水.cpp
+        数组/560和为k的子数组.cpp)
