--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,14 @@ add_executable(TestingProblems
         #链表/合并k个升序链表.cpp
         #字符串类/49.字符串异位词分组.cpp
         #哈希表/128.最长连续子序列.cpp
-        数组/接雨水.cpp
-        数组/560和为k的子数组.cpp
-        数组/239滑动窗口最大值.cpp)
+        #数组/接雨水.cpp
+        #数组/560和为k的子数组.cpp
+        #数组/239滑动窗口最大值.cpp
+        #数组/74搜索二维矩阵.cpp
+        #数组/287寻找重复数.cpp
+        #数组/53最大子数组和.cpp
+        #数组/238除数组自身以外的乘积.cpp
+        #数组/189轮转数组.cpp
+        #数组/73矩阵置零.cpp
+        数组/169多数元素.cpp
+        数组/56合并区间.cpp)
