--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,4 +25,12 @@ add_executable(TestingProblems
         #数组/73矩阵置零.cpp
         #数组/169多数元素.cpp
         #数组/56合并区间.cpp
-        数组/15三数之和.cpp)
+        #数组/15三数之和.cpp
+        #字符串类/反转字符串中的单词.cpp
+        #数组/300最长递增子序列.cpp
+        #链表/148排序链表.cpp
+        #数组/54螺旋矩阵.cpp
+        #二叉树/101对称二叉树.cpp
+        #数组/739每日温度.cpp
+        #字符串类/8字符串转换整数.cpp
+        数组/46全排列.cpp)
